--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASE_DIRECTORY=.
 SERVER_URL=http://107.172.140.130:5000/
-EXPECTED_HASH_CREATE_USER_WALLET=2b9e4e53d995b71185a50b6392bfb3637e516f916010e3>
+EXPECTED_HASH_CREATE_USER_WALLET=2b9e4e53d995b71185a50b6392bfb3637e516f916010e3
 
 
 
